--- a/docs/integration/native-queries.mdx
+++ b/docs/integration/native-queries.mdx
@@ -3,7 +3,7 @@ title: Native Queries
 description: "Using native database drivers alongside OmniQL"
 ---
 
-# Native Queries
+# Queries
 
 OmniQL requires the `:` prefix for all queries. If you need to execute native database commands directly, use your driver alongside OmniQL.
 
