--- a/docs/introduction.mdx
+++ b/docs/introduction.mdx
@@ -52,23 +52,10 @@ The same query works on any supported database:
 | Redis      | `WrapRedis()`  | Full support  |
 
 ## How It Works
-```mermaid
-flowchart LR
-    subgraph Input
-        A[":GET User<br/>WHERE age > 21"]
-    end
-    
-    subgraph OmniQL
-        B["1. Parse<br/>2. Translate<br/>3. Execute"]
-    end
-    
-    subgraph Output
-        C["SELECT * FROM<br/>\"users\" WHERE<br/>\"age\" > 21"]
-    end
-    
-    A --> B --> C
-    B --> D[("[]map[string]any<br/>results")]
-```
+
+<Frame>
+  <img src="https://mermaid.ink/img/pako:eNp1kE1qwzAQha9izNqB-AJeFNK0kEUXIV3JGo01thVkSUhygzF5h9yhF-tITkJJ6Grm8d6bb6aD2ikJBZxb-2JKEcn4WmMIz6SrMHKJqMUXbZvz4-M8Waz2mPAhjCyJWnEcz5KnEyO7yzLmT2Qgaxr0pLWJpKrQVShF-D9_ZnO0rMDmqGpLQrYe0sV8MSd0hFYfCa3QIanYkPsxWqxA9djpINaH6NqYRxp0Z7VD5fvdHmUWBpb2G-h_Bfqb4PcGQ_3vA" alt="OmniQL Flow" />
+</Frame>
 
 1. **Wrap:** Connect OmniQL to your existing database connection.
 2. **Query:** Pass an OmniQL string (starting with `:`) to `client.Query()`.
