--- a/docs/introduction.mdx
+++ b/docs/introduction.mdx
@@ -54,7 +54,7 @@ The same query works on any supported database:
 ## How It Works
 
 <Frame>
-  <img src="https://mermaid.ink/img/pako:eNp1kE1qwzAQha9izNqB-AJeFNK0kEUXIV3JGo01thVkSUhygzF5h9yhF-tITkJJ6Grm8d6bb6aD2ikJBZxb-2JKEcn4WmMIz6SrMHKJqMUXbZvz4-M8Waz2mPAhjCyJWnEcz5KnEyO7yzLmT2Qgaxr0pLWJpKrQVShF-D9_ZnO0rMDmqGpLQrYe0sV8MSd0hFYfCa3QIanYkPsxWqxA9djpINaH6NqYRxp0Z7VD5fvdHmUWBpb2G-h_Bfqb4PcGQ_3vA" alt="OmniQL Flow" />
+  <img src="/images/how-it-works.svg" alt="OmniQL Flow" />
 </Frame>
 
 1. **Wrap:** Connect OmniQL to your existing database connection.
